--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-   <h1>This is Advanced Designed version v66</h1> 
+   <h1>This is Advanced Designed version v66d</h1> 
 </body>
 </html>
