--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
    <h1>This is Advanced Designed version v66d</h1> 
     <p> Welcome to SatYajeets World</p>
+    <h2> I am smarter</h2>
 </body>
 </html>
